FIx imports for disabling paging example

--- a/documentation/docs/graphql/paging.mdx
+++ b/documentation/docs/graphql/paging.mdx
@@ -673,7 +673,7 @@ To disable paging all you can set the `pagingStrategy` option using the `@QueryO
 `PagingStrategies.NONE`.
 
 ```ts title="todo-item.dto.ts" {5}
-import { FilterableField, IDField, QueryOptions } from '@nestjs-query/query-graphql';
+import { FilterableField, IDField, QueryOptions, PagingStrategies } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime } from '@nestjs/graphql';
 
 @ObjectType('TodoItem')
