corrects CRUDResolver section code snippet
TodoItemEntity was used instead TodoItemDTO in constructor (QueryService<*here*>)

--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -123,7 +123,7 @@ import { TodoItemEntity } from './todo-item.entity';
 @Resolver(() => TodoItemDTO)
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO) {
   constructor(
-    @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+    @InjectQueryService(TodoItemEntity) readonly service: QueryService<TodoItemDTO>
   ) {
     super(service);
   }
