Fixed link typo

--- a/documentation/docs/graphql/paging.mdx
+++ b/documentation/docs/graphql/paging.mdx
@@ -36,8 +36,7 @@ export class TodoItemDTO {
 
 ## Cursor Based Paging
 
-By default `nestjs-query` will expose all query many endpoints as cursor based [`connections`](https://relay
-.dev/graphql/connections.htm) that you can use to page through results.
+By default `nestjs-query` will expose all query many endpoints as cursor based [`connections`](https://relay.dev/graphql/connections.htm) that you can use to page through results.
 
 :::note
 When using cursor based connections you are not tied to any particular implementation described below, because of the opaque
